--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -33,7 +33,7 @@
         </form>
     </div>
     <div class="right-side">
-        <h2>API Response</h2>
+        <h2>Result</h2>
         <div id="apiResponse">
             <!-- API response will be displayed here -->
         </div>
